--- a/config.ini.dist
+++ b/config.ini.dist
@@ -6,3 +6,10 @@ address = "mail@mail.com"
 name = "Your name"
 smtp_username = "mail@mail.com"
 smtp_password = "password"
+
+[database]
+db_username = user
+db_password = pass
+db_name     = db
+db_host     = 127.0.0.1
+db_port     = 27017
