Revert htaccess changes that break root urls

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -6,8 +6,8 @@
     #</IfModule>
 
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ index.php [QSA]
+    RewriteRule ^(.*)$ index.php [QSA, L]
 
-    RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-    RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+    # RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+    # RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
 </IfModule>
