Fix the previous fix

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -6,7 +6,7 @@
     #</IfModule>
 
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ index.php [QSA, L]
+    RewriteRule ^(.*)$ index.php [QSA]
 
     # RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
     # RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
